--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,6 @@
 .m-panel{
 	width: 200px;
-	min-height: 90px;
+	min-height: 102px;
 	padding: 30px 20px;
 	border: 1px solid #ddd;
 	background: #fff;
@@ -8,4 +8,7 @@
 	float: left;
 	text-align: center;
 	margin: 0 10px 10px 0;
+}
+a:hover {
+	text-decoration: none;
 }
